--- a/news.html
+++ b/news.html
@@ -278,7 +278,7 @@ $(document).ready(function () {
   <a href="research.html">Research</a>
 </li>
 <li>
-  <a href="outreach.html">News</a>
+  <a href="news.html">News</a>
 </li>
 <li>
   <a href="tutorial.html">Tutorial</a>
