--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@ $(document).ready(function () {
   <a href="research.html">Research</a>
 </li>
 <li>
-  <a href="outreach.html">Outreach</a>
+  <a href="news.html">News</a>
 </li>
 <li>
   <a href="tutorial.html">Tutorial</a>
@@ -311,7 +311,7 @@ $(document).ready(function () {
 
 
 <p><link rel="stylesheet" href="styles.css" type="text/css"></p>
-<p><img src="images/YZ19.JPG" style="width:25%; border:10px solid; margin-right: 20px" align="left"></p>
+<p><img src="images/YZ19.JPG" style="width:35%; border:5px solid; margin-right: 20px" align="left"></p>
 <p>I’m a Ph.D. candidate in the <a href="https://journalism.wisc.edu">School of Journalism &amp; Mass Communication at the University of Wisconsin Madison</a>. My research concerns the processes and consequences of political communication in the hybrid media system, particularly the role of social media in shaping attention and opinion. I’m interested in analyses at micro, meso and macro levels. I have written academic articles about the assemblage of social media following, social media amplification of a certain object, social media response to contentious topics, hostile media perception in social media news consumption, and fact-check effects. The topical areas of those articles range from gun laws, mass shootings, the #MeToo movement, Donald Trump’s social media following, to the Russian disinformation campaign.</p>
 <p>The methods I use in my research are mostly computational, though I am also conversant with survey and experimental methods. I am able to independently collect large Twitter datasets through its API, conduct automated text analysis using unsupervised and supervised machine learning, perform community detection via various clustering techniques, and run time series modeling. Besides using existing computational methods, I also develop innovative methods in collaboration with colleagues from other disciplines to facilitate communication research.</p>
 <p>R is my primary programming language for research. I’m also familiar with Hadoop, Java, SPSS and Python.</p>
