--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@
 
 
 
-<title></title>
+<title>contact.utf8.md</title>
 
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -310,7 +310,7 @@ $(document).ready(function () {
 </div>
 
 
-<p>You can reach me via either <a href="mailto:zhang525@wisc.edu">zhang525@wisc.edu</a> or <a href="mailto:yinizhang2011@gmail.com">yinizhang2011@gmail.com</a>.</p>
+<p>You can reach me via either <a href="mailto:zhang525@wisc.edu" class="email">zhang525@wisc.edu</a> or <a href="mailto:yinizhang2011@gmail.com" class="email">yinizhang2011@gmail.com</a>.</p>
 
 
 
