--- a/research.html
+++ b/research.html
@@ -12,7 +12,7 @@
 
 
 
-<title></title>
+<title>research.utf8.md</title>
 
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -314,6 +314,9 @@ $(document).ready(function () {
 <p>My research concerns how the abundance and interconnectedness of the digital media system shape the shifting communication ecology. My current research program consists of three parts: 1) how actors drive attention toward and thus amplify a certain object; 2) how citizen expression on social media interacts with other parts of the media system; and 3) how computational techniques can be harnessed and developed to facilitate communication research.</p>
 <p><strong>PUBLICATIONS</strong></p>
 <p>Zhang, Y., Shah, D., Foley, J., Abhishek, A., Lukito, J., Suk, J., Kim, S., Sun, Z., Pevehouse, J., &amp; Garlough, C. (2019). Whose Lives Matter? Mass Shootings and Social Media Discourses of Sympathy and Policy, 2012-2014. Journal of Computer-Mediated Communication. <a href="https://doi.org/10.1093/jcmc/zmz009" class="uri">https://doi.org/10.1093/jcmc/zmz009</a></p>
+<p>Wells, C., Zhang, Y., Lukito, J. &amp; Pevehouse, J. (2019). The formation of attentive publics in the hybrid media system: How Donald Trump assembled his amplification machine. Mass Communication &amp; Society. <a href="https://doi:10.1080/15205436.2019.1690664" class="uri">https://doi:10.1080/15205436.2019.1690664</a></p>
+<p>Chen, F., Zhang, Y. &amp; Rohe, K. (forthcoming). Targeted sampling from massive Block- model graphs with personalized PageRank. Journal of the Royal Statistical Society.</p>
+<p>Lukito J., Suk, J., Zhang, Y., Doroshenko, L., Kim, S. J., Su, M-H., Xia, Y., Freelon, D., &amp; Wells C. (forthcoming). Hacking the Message Amplification Cycle: How Russia Infiltrated American Political Journalism. International Journal of Press/Politics.</p>
 <p>Suk, J., Abhishek, A., Zhang, Y., Ahn, S.Y., Correa, T., Garlough, C. &amp; Shah, D. (2019). #MeToo, Networked Acknowledgement, and Connective Action: How “Empowerment Through Empathy” Launched a Social Movement. Social Science Computer Review. <a href="https://doi.org/10.1177/0894439319864882" class="uri">https://doi.org/10.1177/0894439319864882</a></p>
 <p>Xia, Y., Lukito, J., Zhang, Y., Wells, C., Kim, S., &amp; Tong, C. (2019). Disinformation, performed: Self-presentation of a Russian IRA account on Twitter. Information, Communication and Society. <a href="https://doi.org/10.1080/1369118X.2019.1621921" class="uri">https://doi.org/10.1080/1369118X.2019.1621921</a></p>
 <p>Lukito, J., Wells, C., Zhang, Y., Doroshenko, L., Kim, S.J., S, M.H., Suk, J., Xia, Y. &amp; Freelon, D. (2018). The Twitter Exploit: How Russian Propaganda Infiltrated U.S. News. [White paper]. Retrieved April 27, 2018, from University of Wisconsin Madison: <a href="https://uwmadison.box.com/v/TwitterExploit" class="uri">https://uwmadison.box.com/v/TwitterExploit</a></p>
@@ -321,9 +324,6 @@ $(document).ready(function () {
 <p>Zhang, Y., Wang, Y., Foley, J., Suk, J., &amp; Conathan, D. (2017, July). Tweeting Mass Shootings: The Dynamics of Issue Attention on Social Media. In Proceedings of the 8th International Conference on Social Media &amp; Society (p. 59). ACM.</p>
 <p><strong>MANUSCRIPTS UNDER REVIEW &amp; IN PREPARATION</strong></p>
 <p>Zhang, Y., Lukito J., Su, M-H., Suk, J., Xia, Y., Kim, S., Doroshenko, L., Song, W. &amp; Wells, C. (submitted to Political Communication) Assembling Social Media Following through Polarized Publics and Media: How Russian IRA Accounts Gained Influence in the 2016 U.S. Election Cycle.</p>
-<p>Wells, C., Zhang, Y., Lukito, J. &amp; Pevehouse, J. (R&amp;R at Mass Communication &amp; Society) The formation of attentive publics in the hybrid media system: How Donald Trump assembled his amplification machine.</p>
-<p>Chen, F., Zhang, Y. &amp; Rohe, K. (R&amp;R at Journal of the Royal Statistical Society) Targeted sampling from massive Blockmodel graphs with personalized PageRank.</p>
-<p>Lukito J., Suk, J., Zhang, Y., Doroshenko, L., Kim, S. J., Su, M-H., Xia, Y., Freelon, D., &amp; Wells C. (R&amp;R at International Journal of Press/Politics) Hacking the Message Amplification Cycle: How Russia Infiltrated American Political Journalism.</p>
 <p>Pelled, A., Lukito, J., Foley, J., Zhang, Y., Sun, Z., Vitolo-Haddad, C., Pevehouse, J., &amp; Shah, D. (submitted to IJOC). Death across the news spectrum: A time series analysis of partisan coverage following mass shootings in the U.S.</p>
 <p>Zhang, Y., Shah, D., Valenzuela, S. &amp; Pevehouse, J. (manuscript in preparation) Mass Shootings and the Hybrid and Polarized Media System: Evidence of a Shifting Communication Ecology</p>
 <p>Zhang, Y., Chen, F. &amp; Rohe, K. (manuscript in preparation) Tracking Networked Public Opinion Through Flocks.</p>
