--- a/research.html
+++ b/research.html
@@ -312,6 +312,7 @@ $(document).ready(function () {
 
 <p><link rel="stylesheet" href="styles.css" type="text/css"></p>
 <p>My research concerns how the abundance and interconnectedness of the digital media system shape the shifting communication ecology. My current research program consists of three parts: 1) how actors drive attention toward and thus amplify a certain object; 2) how citizen expression on social media interacts with other parts of the media system; and 3) how computational techniques can be harnessed and developed to facilitate communication research.</p>
+<p>Here’s a link to <a href="https://scholar.google.com/citations?user=OQqFZoEAAAAJ&amp;hl=en">my Google Scholar</a>.</p>
 <p><strong>PUBLICATIONS</strong></p>
 <p>Zhang, Y., Shah, D., Foley, J., Abhishek, A., Lukito, J., Suk, J., Kim, S., Sun, Z., Pevehouse, J., &amp; Garlough, C. (2019). Whose Lives Matter? Mass Shootings and Social Media Discourses of Sympathy and Policy, 2012-2014. Journal of Computer-Mediated Communication. <a href="https://doi.org/10.1093/jcmc/zmz009" class="uri">https://doi.org/10.1093/jcmc/zmz009</a></p>
 <p>Wells, C., Zhang, Y., Lukito, J. &amp; Pevehouse, J. (2019). The formation of attentive publics in the hybrid media system: How Donald Trump assembled his amplification machine. Mass Communication &amp; Society. <a href="https://doi:10.1080/15205436.2019.1690664" class="uri">https://doi:10.1080/15205436.2019.1690664</a></p>
