--- a/index.html
+++ b/index.html
@@ -11,26 +11,40 @@
 
 
 
-<title>index.utf8</title>
+<title>index.knit</title>
 
+<script src="site_libs/header-attrs-2.9/header-attrs.js"></script>
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <link href="site_libs/bootstrap-3.3.5/css/paper.min.css" rel="stylesheet" />
 <script src="site_libs/bootstrap-3.3.5/js/bootstrap.min.js"></script>
 <script src="site_libs/bootstrap-3.3.5/shim/html5shiv.min.js"></script>
 <script src="site_libs/bootstrap-3.3.5/shim/respond.min.js"></script>
+<style>h1 {font-size: 34px;}
+       h1.title {font-size: 38px;}
+       h2 {font-size: 30px;}
+       h3 {font-size: 24px;}
+       h4 {font-size: 18px;}
+       h5 {font-size: 16px;}
+       h6 {font-size: 12px;}
+       code {color: inherit; background-color: rgba(0, 0, 0, 0.04);}
+       pre:not([class]) { background-color: white }</style>
 <script src="site_libs/navigation-1.1/tabsets.js"></script>
 <link href="site_libs/highlightjs-9.12.0/default.css" rel="stylesheet" />
 <script src="site_libs/highlightjs-9.12.0/highlight.js"></script>
 <link href="site_libs/font-awesome-5.1.0/css/all.css" rel="stylesheet" />
 <link href="site_libs/font-awesome-5.1.0/css/v4-shims.css" rel="stylesheet" />
 
-<style type="text/css">code{white-space: pre;}</style>
 <style type="text/css">
-  pre:not([class]) {
-    background-color: white;
-  }
-</style>
+  code{white-space: pre-wrap;}
+  span.smallcaps{font-variant: small-caps;}
+  span.underline{text-decoration: underline;}
+  div.column{display: inline-block; vertical-align: top; width: 50%;}
+  div.hanging-indent{margin-left: 1.5em; text-indent: -1.5em;}
+  ul.task-list{list-style: none;}
+    </style>
+
+<style type="text/css">code{white-space: pre;}</style>
 <script type="text/javascript">
 if (window.hljs) {
   hljs.configure({languages: []});
@@ -43,32 +57,7 @@ if (window.hljs) {
 
 
 
-<style type="text/css">
-h1 {
-  font-size: 34px;
-}
-h1.title {
-  font-size: 38px;
-}
-h2 {
-  font-size: 30px;
-}
-h3 {
-  font-size: 24px;
-}
-h4 {
-  font-size: 18px;
-}
-h5 {
-  font-size: 16px;
-}
-h6 {
-  font-size: 12px;
-}
-.table th:not([align]) {
-  text-align: left;
-}
-</style>
+
 
 <link rel="stylesheet" href="styles.css" type="text/css" />
 
@@ -79,10 +68,6 @@ h6 {
   max-width: 940px;
   margin-left: auto;
   margin-right: auto;
-}
-code {
-  color: inherit;
-  background-color: rgba(0, 0, 0, 0.04);
 }
 img {
   max-width:100%;
@@ -99,40 +84,13 @@ button.code-folding-btn:focus {
 summary {
   display: list-item;
 }
+pre code {
+  padding: 0;
+}
 </style>
 
 
 <style type="text/css">
-/* padding for bootstrap navbar */
-body {
-  padding-top: 64px;
-  padding-bottom: 40px;
-}
-/* offset scroll position for anchor links (for fixed navbar)  */
-.section h1 {
-  padding-top: 69px;
-  margin-top: -69px;
-}
-.section h2 {
-  padding-top: 69px;
-  margin-top: -69px;
-}
-.section h3 {
-  padding-top: 69px;
-  margin-top: -69px;
-}
-.section h4 {
-  padding-top: 69px;
-  margin-top: -69px;
-}
-.section h5 {
-  padding-top: 69px;
-  margin-top: -69px;
-}
-.section h6 {
-  padding-top: 69px;
-  margin-top: -69px;
-}
 .dropdown-submenu {
   position: relative;
 }
@@ -160,7 +118,7 @@ body {
   margin-right: -10px;
 }
 .dropdown-submenu:hover>a:after {
-  border-left-color: #ffffff;
+  border-left-color: #adb5bd;
 }
 .dropdown-submenu.pull-left {
   float: none;
@@ -172,7 +130,7 @@ body {
 }
 </style>
 
-<script>
+<script type="text/javascript">
 // manage active state of menu based on current page
 $(document).ready(function () {
   // active menu anchor
@@ -183,10 +141,23 @@ $(document).ready(function () {
   var menuAnchor = $('a[href="' + href + '"]');
 
   // mark it active
-  menuAnchor.parent().addClass('active');
+  menuAnchor.tab('show');
 
   // if it's got a parent navbar menu mark it active as well
   menuAnchor.closest('li.dropdown').addClass('active');
+
+  // Navbar adjustments
+  var navHeight = $(".navbar").first().height() + 15;
+  var style = document.createElement('style');
+  var pt = "padding-top: " + navHeight + "px; ";
+  var mt = "margin-top: -" + navHeight + "px; ";
+  var css = "";
+  // offset scroll position for anchor links (for fixed navbar)
+  for (var i = 1; i <= 6; i++) {
+    css += ".section h" + i + "{ " + pt + mt + "}\n";
+  }
+  style.innerHTML = "body {" + pt + "padding-bottom: 40px; }\n" + css;
+  document.head.appendChild(style);
 });
 </script>
 
@@ -198,7 +169,6 @@ $(document).ready(function () {
   max-height: 500px;
   min-height: 44px;
   overflow-y: auto;
-  background: white;
   border: 1px solid #ddd;
   border-radius: 4px;
 }
@@ -302,7 +272,7 @@ $(document).ready(function () {
   </div><!--/.container -->
 </div><!--/.navbar -->
 
-<div class="fluid-row" id="header">
+<div id="header">
 
 
 
@@ -312,12 +282,13 @@ $(document).ready(function () {
 
 <p><link rel="stylesheet" href="styles.css" type="text/css"></p>
 <p><img src="images/YZ19.JPG" style="width:30%; border:5px solid; margin-right: 20px" align="left"></p>
-<p>I’m an assistant professor in the <a href="http://www.buffalo.edu/cas/communication.html">Department of Communication</a> at the University at Buffalo. I graduated with a Ph.D. in mass communication from the <a href="https://journalism.wisc.edu">School of Journalism &amp; Mass Communication at the University of Wisconsin Madison</a>. My research concerns the processes and consequences of communication in the hybrid media system, particularly the role of social media in shaping public attention and public opinion. I’m interested in analyses at micro, meso and macro levels. I have written academic articles about the assemblage of social media following, social media amplification of a certain object, social media response to contentious topics, social media public opinion, hostile media perception in social media news consumption, and fact-check effects. The topical areas of those articles range from gun laws, mass shootings, the #MeToo movement, Donald Trump’s social media following, to the Russian disinformation campaign.</p>
+<p>I’m an assistant professor in the <a href="http://www.buffalo.edu/cas/communication.html">Department of Communication</a> at the University at Buffalo. I graduated with a Ph.D. in mass communication from the <a href="https://journalism.wisc.edu">School of Journalism &amp; Mass Communication at the University of Wisconsin Madison</a>. My research concerns the processes and consequences of communication in the hybrid media system, particularly the role of social media in shaping public attention and public opinion. I have written academic articles about the assemblage of social media following, social media amplification of a certain object, social media response to contentious topics, social media public opinion, hostile media perception in social media news consumption, and fact-check effects. The topical areas of those articles range from gun laws, mass shootings, the #MeToo movement, Donald Trump’s social media following, to the Russian disinformation campaign.</p>
 <p>The methods I use in my research are mostly computational, though I am also conversant with survey and experimental methods. I am able to independently collect large Twitter datasets through its APIs, conduct automated text analysis using unsupervised and supervised machine learning, perform community detection via various clustering techniques, and run time series modeling. Besides using existing computational methods, I also develop innovative methods in collaboration with colleagues from other disciplines to facilitate communication research.</p>
 <p>R is my primary programming language for research. I’m also familiar with Hadoop, Java, SPSS and Python.</p>
 <p>Books that have greatly influenced me in my formative years at SJMC include John Zaller’s <a href="https://www.cambridge.org/core/books/nature-and-origins-of-mass-opinion/70B1485D3A9CFF55ADCCDD42FC7E926A">The Nature and Origins of Mass Opinion</a>, Yochai Benkler’s <a href="http://www.benkler.org/Benkler_Wealth_Of_Networks.pdf">The Wealth of Networks</a>, Fred Turner’s <a href="https://www.press.uchicago.edu/ucp/books/book/chicago/F/bo3773600.html">From Counterculture to Cyberculture: Stewart Brand, the Whole Earth Network, and the Rise of Digital Utopianism</a>, Bruce Bimber, Andrew Flanagin and Cynthia Stohl’s <a href="https://www.cambridge.org/us/academic/subjects/politics-international-relations/american-government-politics-and-policy/collective-action-organizations-interaction-and-engagement-era-technological-change">Collective Action in Organizations</a>, David Karpf’s <a href="https://www.oxfordscholarship.com/view/10.1093/acprof:oso/9780199898367.001.0001/acprof-9780199898367">The MoveOn Effect: The Unexpected Transformation of American Political Advocacy</a>, Lance Bennett &amp; Alexandra Segerberg’s <a href="https://www.cambridge.org/core/books/logic-of-connective-action/6B54DBBEAD1625C2778F8D80A17D58E1">The Logic of Connective Action</a>, Matthew Hindman’s The <a href="https://press.princeton.edu/titles/8781.html">Myth of Digital Democracy</a>, Alice Marwick’s <a href="https://yalebooks.yale.edu/book/9780300209389/status-update">Status Update: Celebrity, Publicity, and Branding in the Social Media Age</a>, Andrew Chadwick’s <a href="https://www.andrewchadwick.com/hybrid-media-system">The Hybrid Media System: Politics and Power</a> and James Webster’s <a href="https://mitpress.mit.edu/books/marketplace-attention">The Marketplace of Attention</a>.</p>
 <p>Apart from doing research, I like hiking in the many great mountains of Colorado, traveling around the states, doing Zumba, cooking comfort food, and watching talks shows, movies and TV series. The incomplete list of my favorite TV series includes Westworld, Silicon Valley, Games of Thrones, True Detective, Fargo, and many more. I used to be a big fan of classical and rock music, but as I age I find myself gravitating toward podcasts, something I enjoy listening during my daily commute.</p>
 <p><strong>My full CV is available <a href="files/YiniZHANG_CV.pdf">here</a>.</strong></p>
+<p><strong>My dissertation won an award :) A condensed version is available <a href="files/A%20Network%20Approach%20Summary.pdf">here</a></strong></p>
 <p><em>This website was created using Emily C. Zabor’s amazing tutorial <a href="https://www.emilyzabor.com/tutorials/rmarkdown_websites_tutorial.html" class="uri">https://www.emilyzabor.com/tutorials/rmarkdown_websites_tutorial.html</a></em></p>
 
 
@@ -329,7 +300,7 @@ $(document).ready(function () {
 
 // add bootstrap table styles to pandoc tables
 function bootstrapStylePandocTables() {
-  $('tr.header').parent('thead').parent('table').addClass('table table-condensed');
+  $('tr.odd').parent('tbody').parent('table').addClass('table table-condensed');
 }
 $(document).ready(function () {
   bootstrapStylePandocTables();
@@ -347,7 +318,7 @@ $(document).ready(function () {
 
 $(document).ready(function () {
   $('.tabset-dropdown > .nav-tabs > li').click(function () {
-    $(this).parent().toggleClass('nav-tabs-open')
+    $(this).parent().toggleClass('nav-tabs-open');
   });
 });
 </script>
