--- a/research.html
+++ b/research.html
@@ -11,26 +11,40 @@
 
 
 
-<title>research.utf8</title>
+<title>research.knit</title>
 
+<script src="site_libs/header-attrs-2.9/header-attrs.js"></script>
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <link href="site_libs/bootstrap-3.3.5/css/paper.min.css" rel="stylesheet" />
 <script src="site_libs/bootstrap-3.3.5/js/bootstrap.min.js"></script>
 <script src="site_libs/bootstrap-3.3.5/shim/html5shiv.min.js"></script>
 <script src="site_libs/bootstrap-3.3.5/shim/respond.min.js"></script>
+<style>h1 {font-size: 34px;}
+       h1.title {font-size: 38px;}
+       h2 {font-size: 30px;}
+       h3 {font-size: 24px;}
+       h4 {font-size: 18px;}
+       h5 {font-size: 16px;}
+       h6 {font-size: 12px;}
+       code {color: inherit; background-color: rgba(0, 0, 0, 0.04);}
+       pre:not([class]) { background-color: white }</style>
 <script src="site_libs/navigation-1.1/tabsets.js"></script>
 <link href="site_libs/highlightjs-9.12.0/default.css" rel="stylesheet" />
 <script src="site_libs/highlightjs-9.12.0/highlight.js"></script>
 <link href="site_libs/font-awesome-5.1.0/css/all.css" rel="stylesheet" />
 <link href="site_libs/font-awesome-5.1.0/css/v4-shims.css" rel="stylesheet" />
 
-<style type="text/css">code{white-space: pre;}</style>
 <style type="text/css">
-  pre:not([class]) {
-    background-color: white;
-  }
-</style>
+  code{white-space: pre-wrap;}
+  span.smallcaps{font-variant: small-caps;}
+  span.underline{text-decoration: underline;}
+  div.column{display: inline-block; vertical-align: top; width: 50%;}
+  div.hanging-indent{margin-left: 1.5em; text-indent: -1.5em;}
+  ul.task-list{list-style: none;}
+    </style>
+
+<style type="text/css">code{white-space: pre;}</style>
 <script type="text/javascript">
 if (window.hljs) {
   hljs.configure({languages: []});
@@ -43,32 +57,7 @@ if (window.hljs) {
 
 
 
-<style type="text/css">
-h1 {
-  font-size: 34px;
-}
-h1.title {
-  font-size: 38px;
-}
-h2 {
-  font-size: 30px;
-}
-h3 {
-  font-size: 24px;
-}
-h4 {
-  font-size: 18px;
-}
-h5 {
-  font-size: 16px;
-}
-h6 {
-  font-size: 12px;
-}
-.table th:not([align]) {
-  text-align: left;
-}
-</style>
+
 
 <link rel="stylesheet" href="styles.css" type="text/css" />
 
@@ -79,10 +68,6 @@ h6 {
   max-width: 940px;
   margin-left: auto;
   margin-right: auto;
-}
-code {
-  color: inherit;
-  background-color: rgba(0, 0, 0, 0.04);
 }
 img {
   max-width:100%;
@@ -99,40 +84,13 @@ button.code-folding-btn:focus {
 summary {
   display: list-item;
 }
+pre code {
+  padding: 0;
+}
 </style>
 
 
 <style type="text/css">
-/* padding for bootstrap navbar */
-body {
-  padding-top: 64px;
-  padding-bottom: 40px;
-}
-/* offset scroll position for anchor links (for fixed navbar)  */
-.section h1 {
-  padding-top: 69px;
-  margin-top: -69px;
-}
-.section h2 {
-  padding-top: 69px;
-  margin-top: -69px;
-}
-.section h3 {
-  padding-top: 69px;
-  margin-top: -69px;
-}
-.section h4 {
-  padding-top: 69px;
-  margin-top: -69px;
-}
-.section h5 {
-  padding-top: 69px;
-  margin-top: -69px;
-}
-.section h6 {
-  padding-top: 69px;
-  margin-top: -69px;
-}
 .dropdown-submenu {
   position: relative;
 }
@@ -160,7 +118,7 @@ body {
   margin-right: -10px;
 }
 .dropdown-submenu:hover>a:after {
-  border-left-color: #ffffff;
+  border-left-color: #adb5bd;
 }
 .dropdown-submenu.pull-left {
   float: none;
@@ -172,7 +130,7 @@ body {
 }
 </style>
 
-<script>
+<script type="text/javascript">
 // manage active state of menu based on current page
 $(document).ready(function () {
   // active menu anchor
@@ -183,10 +141,23 @@ $(document).ready(function () {
   var menuAnchor = $('a[href="' + href + '"]');
 
   // mark it active
-  menuAnchor.parent().addClass('active');
+  menuAnchor.tab('show');
 
   // if it's got a parent navbar menu mark it active as well
   menuAnchor.closest('li.dropdown').addClass('active');
+
+  // Navbar adjustments
+  var navHeight = $(".navbar").first().height() + 15;
+  var style = document.createElement('style');
+  var pt = "padding-top: " + navHeight + "px; ";
+  var mt = "margin-top: -" + navHeight + "px; ";
+  var css = "";
+  // offset scroll position for anchor links (for fixed navbar)
+  for (var i = 1; i <= 6; i++) {
+    css += ".section h" + i + "{ " + pt + mt + "}\n";
+  }
+  style.innerHTML = "body {" + pt + "padding-bottom: 40px; }\n" + css;
+  document.head.appendChild(style);
 });
 </script>
 
@@ -198,7 +169,6 @@ $(document).ready(function () {
   max-height: 500px;
   min-height: 44px;
   overflow-y: auto;
-  background: white;
   border: 1px solid #ddd;
   border-radius: 4px;
 }
@@ -302,7 +272,7 @@ $(document).ready(function () {
   </div><!--/.container -->
 </div><!--/.navbar -->
 
-<div class="fluid-row" id="header">
+<div id="header">
 
 
 
@@ -313,36 +283,36 @@ $(document).ready(function () {
 <p><link rel="stylesheet" href="styles.css" type="text/css"></p>
 <p>My research concerns how the abundance and interconnectedness of the digital media system shape the shifting communication ecology. My current research program consists of three parts: 1) how actors drive attention toward and thus amplify a certain object; 2) how citizen expression on social media interacts with other parts of the media system; and 3) how computational techniques can be harnessed and developed to facilitate communication research.</p>
 <p>Here’s a link to <a href="https://scholar.google.com/citations?user=OQqFZoEAAAAJ&amp;hl=en">my Google Scholar</a>.</p>
-<p><strong>PUBLICATIONS</strong></p>
-<p>Zhang, Y., Shah, D., Foley, J., Abhishek, A., Lukito, J., Suk, J., Kim, S., Sun, Z., Pevehouse, J., &amp; Garlough, C. (2019). Whose Lives Matter? Mass Shootings and Social Media Discourses of Sympathy and Policy, 2012-2014. Journal of Computer-Mediated Communication. <a href="https://doi.org/10.1093/jcmc/zmz009" class="uri">https://doi.org/10.1093/jcmc/zmz009</a></p>
-<p>Wells, C., Zhang, Y., Lukito, J. &amp; Pevehouse, J. (2019). The formation of attentive publics in the hybrid media system: How Donald Trump assembled his amplification machine. Mass Communication &amp; Society. <a href="https://doi:10.1080/15205436.2019.1690664" class="uri">https://doi:10.1080/15205436.2019.1690664</a></p>
-<p>Chen, F., Zhang, Y., &amp; Rohe, K. (2019). Targeted sampling from massive block model graphs with personalized PageRank. Journal of the Royal Statistical Society: Series B (Statistical Methodology).</p>
-<p>Lukito, J., Suk, J., Zhang, Y., Doroshenko, L., Kim, S. J., Su, M. H., … &amp; Wells, C. (2019). The Wolves in Sheep’s Clothing: How Russia’s Internet Research Agency Tweets Appeared in US News as Vox Populi. The International Journal of Press/Politics, 1940161219895215.</p>
-<p>Suk, J., Abhishek, A., Zhang, Y., Ahn, S.Y., Correa, T., Garlough, C. &amp; Shah, D. (2019). #MeToo, Networked Acknowledgement, and Connective Action: How “Empowerment Through Empathy” Launched a Social Movement. Social Science Computer Review. <a href="https://doi.org/10.1177/0894439319864882" class="uri">https://doi.org/10.1177/0894439319864882</a></p>
-<p>Xia, Y., Lukito, J., Zhang, Y., Wells, C., Kim, S., &amp; Tong, C. (2019). Disinformation, performed: Self-presentation of a Russian IRA account on Twitter. Information, Communication and Society. <a href="https://doi.org/10.1080/1369118X.2019.1621921" class="uri">https://doi.org/10.1080/1369118X.2019.1621921</a></p>
-<p>Lukito, J., Wells, C., Zhang, Y., Doroshenko, L., Kim, S.J., S, M.H., Suk, J., Xia, Y. &amp; Freelon, D. (2018). The Twitter Exploit: How Russian Propaganda Infiltrated U.S. News. [White paper]. Retrieved April 27, 2018, from University of Wisconsin Madison: <a href="https://uwmadison.box.com/v/TwitterExploit" class="uri">https://uwmadison.box.com/v/TwitterExploit</a></p>
-<p>Zhang, Y., Wells, C., Wang, S. &amp; Rohe, K. (2018). Attention and amplification in the hybrid media system: The composition and activity of Donald Trump’s Twitter following during the 2016 presidential election. New Media &amp; Society. <a href="https://doi.org/10.1177/1461444817744390" class="uri">https://doi.org/10.1177/1461444817744390</a></p>
-<p>Zhang, Y., Wang, Y., Foley, J., Suk, J., &amp; Conathan, D. (2017, July). Tweeting Mass Shootings: The Dynamics of Issue Attention on Social Media. In Proceedings of the 8th International Conference on Social Media &amp; Society (p. 59). ACM.</p>
-<p><strong>MANUSCRIPTS UNDER REVIEW &amp; IN PREPARATION</strong></p>
-<p>Zhang, Y., Lukito J., Su, M-H., Suk, J., Xia, Y., Kim, S., Doroshenko, L., Song, W. &amp; Wells, C. Assembling Social Media Following through Polarized Publics and Media: How Russian IRA Accounts Gained Influence in the 2016 U.S. Election Cycle.</p>
-<p>Pelled, A., Lukito, J., Foley, J., Zhang, Y., Sun, Z., Vitolo-Haddad, C., Pevehouse, J., &amp; Shah, D. Death across the news spectrum: A time series analysis of partisan coverage following mass shootings in the U.S.</p>
-<p>Zhang, Y., Shah, D., Valenzuela, S. &amp; Pevehouse, J. (manuscript in preparation) Mass Shootings and the Hybrid and Polarized Media System: Evidence of a Shifting Communication Ecology</p>
-<p>Zhang, Y., Chen, F. &amp; Rohe, K. (manuscript in preparation) Networked Public Opinion Through as Flocks in a Murmuration.</p>
-<p>Zhang, Y. &amp; Wang, Y. (manuscript in preparation) When Others “Like” It: The Effect of Social Media Metrics on Perception of Media bias.</p>
-<p>Chen, F., Zhang, Y. &amp; Rohe, K. (manuscript in preparation) Sampling content from large corpus with personalized PageRank and latent Dirichlet allocation.</p>
-<p>Gunther, A., Pelled, A., Zhang, Y., Su, M-H., Wang, Y. &amp; Graves, L. (manuscript in preparation) Biased but Believable: Effect of Fact Checks on Partisan Opinion.</p>
-<p><strong>CONFERENCE PRESENTATIONS</strong></p>
-<p>Suk, J., Abhishek, A., Zhang, Y. &amp; Ahn, S.Y.. (2019). A Temporal Analysis of the #MeToo Movement Discourses. Paper presented at the 2019 Annual International Communication Association (ICA) Conference, Washington D.C, USA.</p>
-<p>Zhang, Y., Shah, D., Foley, J., Abhishek, A., Pevehouse, J., Lukito, J., Kim, S., Suk, J., Yang, F. &amp; Garlough C. (2018). The Features of Tragedy, Expressions of Sympathy, and Debates over Policy: A Time Series Analysis of Mass Shootings and Social Media Discourses. Paper accepted for presentation at the 2018 Annual International Communication Association (ICA) Conference, Prague, Czech.</p>
-<p>Wells, C., Zhang, Y., Lukito, J. &amp; Pevehouse, J. (2018). The formation of attentive publics in the hybrid media system: How Donald Trump assembled his amplification machine. Paper accepted for presentation at the 2018 Annual International Communication Association (ICA) Conference, Prague, Czech.</p>
-<p>Suk, J, Zhang, Y., Lukito, J., Su, M. &amp; Foley, J. (2018). Tracing Twitter Buzz: Clustering Hashtags and Handles About Mass Shootings and Gun Control. Paper accepted for presentation at the 2018 Annual International Communication Association (ICA) Conference, Prague, Czech.</p>
-<p>Graves, L., Gunther, A., Pelled, A., Su, M., Wang, Y., &amp; Zhang, Y. (2018). Effects of Fact Checks on Partisan Beliefs and Perceptions of Bias. Paper accepted for presentation at the 2018 Annual International Communication Association (ICA) Conference, Prague, Czech.</p>
-<p>Gunther, A., Graves, L., Zhang, Y., Pelled, A., &amp; Wang, Y. (2017). Effects of Fact Checks on Partisan Beliefs and Perceptions of Bias. Paper presented at the 2017 Midwest Association for Public Opinion Research Conference.</p>
-<p>Yang, J., Sangari, A., Duncan, M., Zhang, Y., … &amp; Wu, Y. (2017). Obamacare and political polarization on Twitter: An application of machine learning and social network analysis. Paper accepted for presentation at the 2017 Annual International Communication Association (ICA) Conference, San Diego, CA.</p>
-<p>Zhang, Y., Wang, Y., Foley, J., Suk, J., &amp; Conathan, D. (2017). Tweeting Mass Shootings —The Dynamics of Issue Attention on Social Media. Paper accepted for presentation at the 2017 International Conference on Social Media and Society, Toronto, Canada.</p>
-<p>Zhang, Y. &amp; Wang, Y. (2016). When Others ‘like’ it: Hostile Media Effect in the Era of Social Media. Paper presented at the 2016 Midwest Association for Public Opinion Research Conference, Chicago, IL.</p>
-<p>Zhang, Y. (2016). The power of commenting? – Analyzing modes of Weibo users’ news comments in China. Paper presented at the 2016 Big Ten Mini-Conference, Iowa City, IA.</p>
-<p><em>Last updated: 2019 September</em></p>
+<!-- **PUBLICATIONS** -->
+<!-- Zhang, Y., Shah, D., Foley, J., Abhishek, A., Lukito, J., Suk, J., Kim, S., Sun, Z., Pevehouse, J., & Garlough, C. (2019). Whose Lives Matter? Mass Shootings and Social Media Discourses of Sympathy and Policy, 2012-2014. Journal of Computer-Mediated Communication. https://doi.org/10.1093/jcmc/zmz009  -->
+<!-- Wells, C., Zhang, Y., Lukito, J. & Pevehouse, J. (2019). The formation of attentive publics in the hybrid media system: How Donald Trump assembled his amplification machine. Mass Communication & Society. https://doi:10.1080/15205436.2019.1690664 -->
+<!-- Chen, F., Zhang, Y., & Rohe, K. (2019). Targeted sampling from massive block model graphs with personalized PageRank. Journal of the Royal Statistical Society: Series B (Statistical Methodology). -->
+<!-- Lukito, J., Suk, J., Zhang, Y., Doroshenko, L., Kim, S. J., Su, M. H., ... & Wells, C. (2019). The Wolves in Sheep’s Clothing: How Russia’s Internet Research Agency Tweets Appeared in US News as Vox Populi. The International Journal of Press/Politics, 1940161219895215. -->
+<!-- Suk, J., Abhishek, A., Zhang, Y., Ahn, S.Y., Correa, T., Garlough, C. & Shah, D. (2019). #MeToo, Networked Acknowledgement, and Connective Action: How “Empowerment Through Empathy” Launched a Social Movement. Social Science Computer Review. https://doi.org/10.1177/0894439319864882  -->
+<!-- Xia, Y., Lukito, J., Zhang, Y., Wells, C., Kim, S., & Tong, C. (2019). Disinformation, performed: Self-presentation of a Russian IRA account on Twitter. Information, Communication and Society. https://doi.org/10.1080/1369118X.2019.1621921  -->
+<!-- Lukito, J., Wells, C., Zhang, Y., Doroshenko, L., Kim, S.J., S, M.H., Suk, J., Xia, Y. & Freelon, D. (2018). The Twitter Exploit: How Russian Propaganda Infiltrated U.S. News. [White paper]. Retrieved April 27, 2018, from University of Wisconsin Madison: https://uwmadison.box.com/v/TwitterExploit -->
+<!-- Zhang, Y., Wells, C., Wang, S. & Rohe, K. (2018). Attention and amplification in the hybrid media system: The composition and activity of Donald Trump’s Twitter following during the 2016 presidential election. New Media & Society. https://doi.org/10.1177/1461444817744390 -->
+<!-- Zhang, Y., Wang, Y., Foley, J., Suk, J., & Conathan, D. (2017, July). Tweeting Mass Shootings: The Dynamics of Issue Attention on Social Media. In Proceedings of the 8th International Conference on Social Media & Society (p. 59). ACM. -->
+<!-- **MANUSCRIPTS UNDER REVIEW & IN PREPARATION** -->
+<!-- Zhang, Y., Lukito J., Su, M-H., Suk, J., Xia, Y., Kim, S., Doroshenko, L., Song, W. & Wells, C. Assembling Social Media Following through Polarized Publics and Media: How Russian IRA Accounts Gained Influence in the 2016 U.S. Election Cycle. -->
+<!-- Pelled, A., Lukito, J., Foley, J., Zhang, Y., Sun, Z., Vitolo-Haddad, C., Pevehouse, J., & Shah, D. Death across the news spectrum: A time series analysis of partisan coverage following mass shootings in the U.S.  -->
+<!-- Zhang, Y., Shah, D., Valenzuela, S. &  Pevehouse, J. (manuscript in preparation) Mass Shootings and the Hybrid and Polarized Media System: Evidence of a Shifting Communication Ecology -->
+<!-- Zhang, Y., Chen, F. & Rohe, K. (manuscript in preparation) Networked Public Opinion Through as Flocks in a Murmuration. -->
+<!-- Zhang, Y. & Wang, Y. (manuscript in preparation) When Others “Like” It: The Effect of Social Media Metrics on Perception of Media bias. -->
+<!-- Chen, F., Zhang, Y. & Rohe, K. (manuscript in preparation) Sampling content from large corpus with personalized PageRank and latent Dirichlet allocation. -->
+<!-- Gunther, A., Pelled, A., Zhang, Y., Su, M-H., Wang, Y. & Graves, L. (manuscript in preparation) Biased but Believable: Effect of Fact Checks on Partisan Opinion. -->
+<!-- **CONFERENCE PRESENTATIONS** -->
+<!-- Suk, J., Abhishek, A., Zhang, Y. & Ahn, S.Y.. (2019). A Temporal Analysis of the #MeToo Movement Discourses. Paper presented at the 2019 Annual International Communication Association (ICA) Conference, Washington D.C, USA. -->
+<!-- Zhang, Y., Shah, D., Foley, J., Abhishek, A., Pevehouse, J., Lukito, J., Kim, S., Suk, J., Yang, F. & Garlough C. (2018). The Features of Tragedy, Expressions of Sympathy, and Debates over Policy: A Time Series Analysis of Mass Shootings and Social Media Discourses. Paper accepted for presentation at the 2018 Annual International Communication Association (ICA) Conference, Prague, Czech. -->
+<!-- Wells, C., Zhang, Y., Lukito, J. & Pevehouse, J. (2018). The formation of attentive publics in the hybrid media system: How Donald Trump assembled his amplification machine. Paper accepted for presentation at the 2018 Annual International Communication Association (ICA) Conference, Prague, Czech. -->
+<!-- Suk, J, Zhang, Y., Lukito, J., Su, M. & Foley, J. (2018). Tracing Twitter Buzz: Clustering Hashtags and Handles About Mass Shootings and Gun Control. Paper accepted for presentation at the 2018 Annual International Communication Association (ICA) Conference, Prague, Czech. -->
+<!-- Graves, L., Gunther, A., Pelled, A., Su, M., Wang, Y., & Zhang, Y. (2018). Effects of Fact Checks on Partisan Beliefs and Perceptions of Bias. Paper accepted for presentation at the 2018 Annual International Communication Association (ICA) Conference, Prague, Czech. -->
+<!-- Gunther, A., Graves, L., Zhang, Y., Pelled, A., & Wang, Y. (2017). Effects of Fact Checks on Partisan Beliefs and Perceptions of Bias. Paper presented at the 2017 Midwest Association for Public Opinion Research Conference. -->
+<!-- Yang, J., Sangari, A., Duncan, M., Zhang, Y., ... & Wu, Y. (2017). Obamacare and political polarization on Twitter: An application of machine learning and social network analysis. Paper accepted for presentation at the 2017 Annual International Communication Association (ICA) Conference, San Diego, CA. -->
+<!-- Zhang, Y., Wang, Y., Foley, J., Suk, J., & Conathan, D. (2017). Tweeting Mass Shootings —The Dynamics of Issue Attention on Social Media. Paper accepted for presentation at the 2017 International Conference on Social Media and Society, Toronto, Canada. -->
+<!-- Zhang, Y. & Wang, Y. (2016). When Others ‘like’ it: Hostile Media Effect in the Era of Social Media. Paper presented at the 2016 Midwest Association for Public Opinion Research Conference, Chicago, IL. -->
+<!-- Zhang, Y. (2016). The power of commenting? – Analyzing modes of Weibo users’ news comments in China. Paper presented at the 2016 Big Ten Mini-Conference, Iowa City, IA. -->
+<!-- *Last updated: 2019 September* -->
 
 
 
@@ -353,7 +323,7 @@ $(document).ready(function () {
 
 // add bootstrap table styles to pandoc tables
 function bootstrapStylePandocTables() {
-  $('tr.header').parent('thead').parent('table').addClass('table table-condensed');
+  $('tr.odd').parent('tbody').parent('table').addClass('table table-condensed');
 }
 $(document).ready(function () {
   bootstrapStylePandocTables();
@@ -371,7 +341,7 @@ $(document).ready(function () {
 
 $(document).ready(function () {
   $('.tabset-dropdown > .nav-tabs > li').click(function () {
-    $(this).parent().toggleClass('nav-tabs-open')
+    $(this).parent().toggleClass('nav-tabs-open');
   });
 });
 </script>
