--- a/research.html
+++ b/research.html
@@ -250,9 +250,6 @@ $(document).ready(function () {
 <li>
   <a href="news.html">News</a>
 </li>
-<li>
-  <a href="tutorial.html">Tutorial</a>
-</li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li>
@@ -281,7 +278,7 @@ $(document).ready(function () {
 
 
 <p><link rel="stylesheet" href="styles.css" type="text/css"></p>
-<p>My research concerns how the abundance and interconnectedness of the digital media system shape the shifting communication ecology. My current research program consists of three parts: 1) how actors drive attention toward and thus amplify a certain object; 2) how citizen expression on social media interacts with other parts of the media system; and 3) how computational techniques can be harnessed and developed to facilitate communication research.</p>
+<p>My research concerns how the abundance and interconnectedness of the hybrid media system shape the shifting communication ecology. My current research program consists of three parts: 1) investigating how people connect and communicate with each other on social media; 2) tracing communication flows across social and news media; and 3) developing computational techniques to facilitate communication research.</p>
 <p>Here’s a link to <a href="https://scholar.google.com/citations?user=OQqFZoEAAAAJ&amp;hl=en">my Google Scholar</a>.</p>
 <!-- **PUBLICATIONS** -->
 <!-- Zhang, Y., Shah, D., Foley, J., Abhishek, A., Lukito, J., Suk, J., Kim, S., Sun, Z., Pevehouse, J., & Garlough, C. (2019). Whose Lives Matter? Mass Shootings and Social Media Discourses of Sympathy and Policy, 2012-2014. Journal of Computer-Mediated Communication. https://doi.org/10.1093/jcmc/zmz009  -->
