--- a/index.html
+++ b/index.html
@@ -247,9 +247,6 @@ $(document).ready(function () {
         <li>
   <a href="research.html">Research</a>
 </li>
-<li>
-  <a href="news.html">News</a>
-</li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li>
@@ -285,7 +282,7 @@ $(document).ready(function () {
 <p>Books that have greatly influenced me in my formative years at SJMC include John Zaller’s <a href="https://www.cambridge.org/core/books/nature-and-origins-of-mass-opinion/70B1485D3A9CFF55ADCCDD42FC7E926A">The Nature and Origins of Mass Opinion</a>, Yochai Benkler’s <a href="http://www.benkler.org/Benkler_Wealth_Of_Networks.pdf">The Wealth of Networks</a>, Fred Turner’s <a href="https://www.press.uchicago.edu/ucp/books/book/chicago/F/bo3773600.html">From Counterculture to Cyberculture: Stewart Brand, the Whole Earth Network, and the Rise of Digital Utopianism</a>, Bruce Bimber, Andrew Flanagin and Cynthia Stohl’s <a href="https://www.cambridge.org/us/academic/subjects/politics-international-relations/american-government-politics-and-policy/collective-action-organizations-interaction-and-engagement-era-technological-change">Collective Action in Organizations</a>, David Karpf’s <a href="https://www.oxfordscholarship.com/view/10.1093/acprof:oso/9780199898367.001.0001/acprof-9780199898367">The MoveOn Effect: The Unexpected Transformation of American Political Advocacy</a>, Lance Bennett &amp; Alexandra Segerberg’s <a href="https://www.cambridge.org/core/books/logic-of-connective-action/6B54DBBEAD1625C2778F8D80A17D58E1">The Logic of Connective Action</a>, Zeynep Tufekci’s <a href="https://www.twitterandteargas.org/">Twitter and Tear Gas: The Power and Fragility of Networked Protest</a>, Matthew Hindman’s The <a href="https://press.princeton.edu/titles/8781.html">Myth of Digital Democracy</a>, Alice Marwick’s <a href="https://yalebooks.yale.edu/book/9780300209389/status-update">Status Update: Celebrity, Publicity, and Branding in the Social Media Age</a>, Andrew Chadwick’s <a href="https://www.andrewchadwick.com/hybrid-media-system">The Hybrid Media System: Politics and Power</a> and James Webster’s <a href="https://mitpress.mit.edu/books/marketplace-attention">The Marketplace of Attention</a>.</p>
 <p>Apart from doing research, I like hiking and traveling around the states, doing Zumba, cooking comfort food, and watching talks shows, movies and TV series. The incomplete list of my favorite TV series includes Westworld, Silicon Valley, Games of Thrones, True Detective, Fargo, and many more. I used to be a big fan of classical and rock music, but as I age I find myself gravitating toward podcasts, something I enjoy listening during my daily commute.</p>
 <p><strong>My dissertation won an award :) A summary is available <a href="files/A%20Network%20Approach%20Summary.pdf">here</a>.</strong></p>
-<p><strong>My full CV is available <a href="files/Yini_Zhang_CV_202107.pdf">here</a>.</strong></p>
+<p><strong>My full CV is available <a href="files/Yini_CV_Jan_2022.pdf">here</a>.</strong></p>
 
 
 
