--- a/index.html
+++ b/index.html
@@ -248,9 +248,7 @@ $(document).ready(function () {
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
-        <li>
-  <a href="research.html">Research</a>
-</li>
+        
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li>
@@ -280,39 +278,53 @@ $(document).ready(function () {
 
 <p><link rel="stylesheet" href="styles.css" type="text/css"></p>
 <p><img src="images/YiniZhang.jpg" style="width:30%; border:5px solid; margin-right: 20px" align="left"></p>
+<p><strong>Hi there! Welcome to this tiny corner of mine on the
+boundless internet!</strong></p>
 <p>I’m an assistant professor in the <a
 href="http://www.buffalo.edu/cas/communication.html">Department of
 Communication</a> at the University at Buffalo. I graduated with a
 Ph.D. in mass communication from the <a
 href="https://journalism.wisc.edu">School of Journalism &amp; Mass
-Communication at the University of Wisconsin Madison</a>. My research
-concerns the processes and consequences of communication in the hybrid
-media system. Specifically, I apply computational methods to the study
-of networked actors on social media, information flow across traditional
-and social media, and their implications for journalism and democracy. I
-have written academic articles about the assemblage of social media
-following, social media amplification of a certain object, social media
-response to contentious issues and events, and social media public
-opinion. The topical areas of those articles range from mass shootings
-and gun control, immigration, the #MeToo movement, Donald Trump’s social
-media following, to the Russian disinformation campaign.</p>
-<p>The methods I use in my research are primarily computational, though
-I am also conversant with survey and experimental methods. For research,
-I usually collect large Twitter datasets through its APIs, conduct
-automated text analysis using unsupervised and supervised machine
-learning, perform community detection via various clustering techniques,
-and run time series modeling. Besides using existing computational
-methods, I also develop innovative methods in collaboration with
-colleagues from other disciplines to facilitate communication
+Communication at the University of Wisconsin Madison</a>.</p>
+<p>I study the processes and consequences of communication in the hybrid
+media system. Specifically, I apply computational methods to explore
+networked actors on social media, information flow across traditional
+and social media, and their implications for journalism and democracy.
+My current research program consists of three parts: 1) investigating
+how people connect and communicate with each other on social media; 2)
+tracing communication flows across social and news media; and 3)
+developing computational techniques to facilitate communication
 research.</p>
-<p>R is my primary programming language for research. I’m also familiar
-with Hadoop, Java, SPSS and Python.</p>
-<p>Books that have greatly influenced me in my formative years at SJMC
-include John Zaller’s <a
+<p>I have written academic articles about how social media actors
+assemble their followings, how social media amplify obscure actors and
+extremist groups, and how to measure social media public opinion. The
+topics of those articles range from mass shootings and gun control,
+immigration, the #MeToo movement, Donald Trump’s social media following,
+QAnon, to the Russian IRA disinformation campaign. Here’s a link to <a
+href="https://scholar.google.com/citations?user=OQqFZoEAAAAJ&amp;hl=en">my
+Google Scholar</a>.</p>
+<p>The methods I use in my research are primarily computational, though
+I am also conversant with survey and experimental methods. For my
+research, I usually collect Twitter data via its APIs, conduct automated
+text analysis using unsupervised and supervised machine learning,
+perform community detection via various clustering techniques, and run
+time series modeling. Recently, I have moved beyond Twitter to include
+other platforms in my research, like Facebook, YouTube, and Reddit.
+Besides using existing computational methods, I also develop innovative
+methods in collaboration with colleagues from statistics and computer
+science to facilitate communication research. R is my primary
+programming language for research. I have also used SPSS, Hadoop, Java,
+and Python in the past.</p>
+<p>There are a few books that have greatly influenced me during my
+formative years at SJMC. I’d love to share them with you in case you
+might be interested: John Zaller’s <a
 href="https://www.cambridge.org/core/books/nature-and-origins-of-mass-opinion/70B1485D3A9CFF55ADCCDD42FC7E926A">The
 Nature and Origins of Mass Opinion</a>, Yochai Benkler’s <a
 href="http://www.benkler.org/Benkler_Wealth_Of_Networks.pdf">The Wealth
-of Networks</a>, Fred Turner’s <a
+of Networks</a>, Paul Starr’s <a
+href="https://www.princeton.edu/~starr/CreationoftheMedia/Media.html">The
+Creation of the Media: Political Origins of Modern Communications</a>,
+Fred Turner’s <a
 href="https://www.press.uchicago.edu/ucp/books/book/chicago/F/bo3773600.html">From
 Counterculture to Cyberculture: Stewart Brand, the Whole Earth Network,
 and the Rise of Digital Utopianism</a>, Bruce Bimber, Andrew Flanagin
@@ -334,14 +346,10 @@ Andrew Chadwick’s <a
 href="https://www.andrewchadwick.com/hybrid-media-system">The Hybrid
 Media System: Politics and Power</a>, James Webster’s <a
 href="https://mitpress.mit.edu/books/marketplace-attention">The
-Marketplace of Attention</a>, Nick Couldry’s <a
+Marketplace of Attention</a>, and Nick Couldry’s <a
 href="https://www.wiley.com/en-us/Media,+Society,+World:+Social+Theory+and+Digital+Media+Practice-p-9780745639208">Media,
-Society, World: Social Theory and Digital Media Practice</a>, and Paul
-Starr’s <a
-href="https://www.princeton.edu/~starr/CreationoftheMedia/Media.html">The
-Creation of the Media: Political Origins of Modern Communications</a>.
-Recently, I was inspired by Yochai Benkler, Robert Faris, and Hal
-Roberts’s <a
+Society, World: Social Theory and Digital Media Practice</a>. Recently,
+I was inspired by Yochai Benkler, Robert Faris, and Hal Roberts’s <a
 href="https://oxford.universitypressscholarship.com/view/10.1093/oso/9780190923624.001.0001/oso-9780190923624">Network
 Propaganda: Manipulation, Disinformation, and Radicalization in American
 Politics</a>, Jaime Settle’s <a
@@ -349,17 +357,22 @@ href="https://www.cambridge.org/sg/academic/subjects/politics-international-rela
 How Social Media Polarizes America</a>, and Chris Bail’s <a
 href="https://press.princeton.edu/books/hardcover/9780691203423/breaking-the-social-media-prism">Breaking
 the Social Media Prism: How to Make Our Platforms Less Polarizing</a>.
-If you happen to be fascinated by any one of those books, I’d be
+If you happen to be fascinated by any one of these books, I’d be
 delighted to have a chat with you about it.</p>
-<p>Apart from doing research, I like playing with my little one, hiking,
-traveling, doing Zumba, cooking comfort food, and watching talk shows,
-movies and TV series. I used to be a big fan of classical and rock
-music, but as I grow older I find myself gravitating toward podcasts,
-something I enjoy listening to during my daily commute.</p>
+<p>Apart from doing research, I like playing with my little one (and his
+friends), hiking, traveling, doing Zumba, cooking comfort food, and
+watching talk shows, movies and TV series. I used to be a big fan of
+classical and rock music, but as I grow older I find myself gravitating
+toward podcasts, something I enjoy listening to during my daily
+commute.</p>
 <p><strong>My dissertation won an award :) A summary is available <a
 href="files/A%20Network%20Approach%20Summary.pdf">here</a>.</strong></p>
+<p><strong>I co-founded the CEM (Communication and Emerging Media) lab
+with my colleagues. We have been doing really cool research in the
+basement of Baldy and on Zoom. Check out our lab website <a
+href="https://cemlab.github.io/">here</a>.</strong></p>
 <p><strong>My full CV is available <a
-href="files/Yini_CV_202207.pdf">here</a>.</strong></p>
+href="files/Yini_CV_082022.pdf">here</a>.</strong></p>
 
 
 
