--- a/index.html
+++ b/index.html
@@ -282,19 +282,20 @@ $(document).ready(function () {
 boundless internet!</strong></p>
 <p>I’m an assistant professor in the <a
 href="http://www.buffalo.edu/cas/communication.html">Department of
-Communication</a> at the University at Buffalo. I graduated with a
-Ph.D. in mass communication from the <a
-href="https://journalism.wisc.edu">School of Journalism &amp; Mass
-Communication at the University of Wisconsin Madison</a>.</p>
-<p>I study the processes and consequences of communication in the hybrid
-media system. Specifically, I apply computational methods to explore
-networked actors on social media, information flow across traditional
-and social media, and their implications for journalism and democracy.
-My current research program consists of three parts: 1) investigating
-how people connect and communicate with each other on social media; 2)
-tracing communication flows across social and news media; and 3)
-developing computational techniques to facilitate communication
-research.</p>
+Communication</a> at the University at Buffalo (some people prefer
+SUNY-Buffalo). I graduated with a Ph.D. in mass communication from the
+<a href="https://journalism.wisc.edu">School of Journalism &amp; Mass
+Communication at the University of Wisconsin-Madison</a>.</p>
+<p>I study the processes and consequences of (mostly political)
+communication. My research program centers around three questions at
+three different levels: 1) within social media, how do people express
+opinions and interact with each other, 2) as an ecosystem, how do social
+media platforms relate to each other in term of the flow of information,
+ideas, and debates, and 3) beyond social media, what influence and are
+influenced by social media activities. With these three lines of
+inquiry, I hope to explore the nature and dynamics of public attention,
+opinion expression, and information sharing on social media and their
+implications for journalism and democracy.</p>
 <p>I have written academic articles about how social media actors
 assemble their followings, how social media amplify obscure actors and
 extremist groups, and how to measure social media public opinion. The
@@ -315,54 +316,11 @@ methods in collaboration with colleagues from statistics and computer
 science to facilitate communication research. R is my primary
 programming language. I have a working knowledge of SPSS, Hadoop, Java,
 and Python.</p>
-<p>A few books have greatly shaped my research during my formative years
-at SJMC. I’d love to share them with you in case you might be
-interested: John Zaller’s <a
-href="https://www.cambridge.org/core/books/nature-and-origins-of-mass-opinion/70B1485D3A9CFF55ADCCDD42FC7E926A">The
-Nature and Origins of Mass Opinion</a>, Yochai Benkler’s <a
-href="http://www.benkler.org/Benkler_Wealth_Of_Networks.pdf">The Wealth
-of Networks</a>, Paul Starr’s <a
-href="https://www.princeton.edu/~starr/CreationoftheMedia/Media.html">The
-Creation of the Media: Political Origins of Modern Communications</a>,
-Fred Turner’s <a
-href="https://www.press.uchicago.edu/ucp/books/book/chicago/F/bo3773600.html">From
-Counterculture to Cyberculture: Stewart Brand, the Whole Earth Network,
-and the Rise of Digital Utopianism</a>, Bruce Bimber, Andrew Flanagin
-and Cynthia Stohl’s <a
-href="https://www.cambridge.org/us/academic/subjects/politics-international-relations/american-government-politics-and-policy/collective-action-organizations-interaction-and-engagement-era-technological-change">Collective
-Action in Organizations</a>, David Karpf’s <a
-href="https://www.oxfordscholarship.com/view/10.1093/acprof:oso/9780199898367.001.0001/acprof-9780199898367">The
-MoveOn Effect: The Unexpected Transformation of American Political
-Advocacy</a>, Lance Bennett &amp; Alexandra Segerberg’s <a
-href="https://www.cambridge.org/core/books/logic-of-connective-action/6B54DBBEAD1625C2778F8D80A17D58E1">The
-Logic of Connective Action</a>, Zeynep Tufekci’s <a
-href="https://www.twitterandteargas.org/">Twitter and Tear Gas: The
-Power and Fragility of Networked Protest</a>, Matthew Hindman’s The <a
-href="https://press.princeton.edu/titles/8781.html">Myth of Digital
-Democracy</a>, Alice Marwick’s <a
-href="https://yalebooks.yale.edu/book/9780300209389/status-update">Status
-Update: Celebrity, Publicity, and Branding in the Social Media Age</a>,
-Andrew Chadwick’s <a
-href="https://www.andrewchadwick.com/hybrid-media-system">The Hybrid
-Media System: Politics and Power</a>, James Webster’s <a
-href="https://mitpress.mit.edu/books/marketplace-attention">The
-Marketplace of Attention</a>, and Nick Couldry’s <a
-href="https://www.wiley.com/en-us/Media,+Society,+World:+Social+Theory+and+Digital+Media+Practice-p-9780745639208">Media,
-Society, World: Social Theory and Digital Media Practice</a>. Recently,
-I was inspired by Yochai Benkler, Robert Faris, and Hal Roberts’s <a
-href="https://oxford.universitypressscholarship.com/view/10.1093/oso/9780190923624.001.0001/oso-9780190923624">Network
-Propaganda: Manipulation, Disinformation, and Radicalization in American
-Politics</a>, Jaime Settle’s <a
-href="https://www.cambridge.org/sg/academic/subjects/politics-international-relations/american-government-politics-and-policy/frenemies-how-social-media-polarizes-america?format=HB&amp;isbn=9781108472531">Frenemies:
-How Social Media Polarizes America</a>, and Chris Bail’s <a
-href="https://press.princeton.edu/books/hardcover/9780691203423/breaking-the-social-media-prism">Breaking
-the Social Media Prism: How to Make Our Platforms Less Polarizing</a>.
-If you happen to be fascinated by any one of these books, I’d be
-delighted to have a chat with you about it.</p>
+<!-- A few books have greatly shaped my research during my formative years at SJMC. I'd love to share them with you in case you might be interested: John Zaller's [The Nature and Origins of Mass Opinion](https://www.cambridge.org/core/books/nature-and-origins-of-mass-opinion/70B1485D3A9CFF55ADCCDD42FC7E926A), Yochai Benkler's [The Wealth of Networks](http://www.benkler.org/Benkler_Wealth_Of_Networks.pdf), Paul Starr's [The Creation of the Media: Political Origins of Modern Communications](https://www.princeton.edu/~starr/CreationoftheMedia/Media.html), Fred Turner's [From Counterculture to Cyberculture: Stewart Brand, the Whole Earth Network, and the Rise of Digital Utopianism](https://www.press.uchicago.edu/ucp/books/book/chicago/F/bo3773600.html), Bruce Bimber, Andrew Flanagin and Cynthia Stohl's [Collective Action in Organizations](https://www.cambridge.org/us/academic/subjects/politics-international-relations/american-government-politics-and-policy/collective-action-organizations-interaction-and-engagement-era-technological-change), David Karpf's [The MoveOn Effect: The Unexpected Transformation of American Political Advocacy](https://www.oxfordscholarship.com/view/10.1093/acprof:oso/9780199898367.001.0001/acprof-9780199898367), Lance Bennett & Alexandra Segerberg's [The Logic of Connective Action](https://www.cambridge.org/core/books/logic-of-connective-action/6B54DBBEAD1625C2778F8D80A17D58E1), Zeynep Tufekci's [Twitter and Tear Gas: The Power and Fragility of Networked Protest](https://www.twitterandteargas.org/), Matthew Hindman's The [Myth of Digital Democracy](https://press.princeton.edu/titles/8781.html), Alice Marwick's [Status Update: Celebrity, Publicity, and Branding in the Social Media Age](https://yalebooks.yale.edu/book/9780300209389/status-update), Andrew Chadwick's [The Hybrid Media System: Politics and Power](https://www.andrewchadwick.com/hybrid-media-system), James Webster's [The Marketplace of Attention](https://mitpress.mit.edu/books/marketplace-attention), and Nick Couldry's [Media, Society, World: Social Theory and Digital Media Practice](https://www.wiley.com/en-us/Media,+Society,+World:+Social+Theory+and+Digital+Media+Practice-p-9780745639208). Recently, I was inspired by Yochai Benkler, Robert Faris, and Hal Roberts's [Network Propaganda: Manipulation, Disinformation, and Radicalization in American Politics](https://oxford.universitypressscholarship.com/view/10.1093/oso/9780190923624.001.0001/oso-9780190923624), Jaime Settle's [Frenemies: How Social Media Polarizes America](https://www.cambridge.org/sg/academic/subjects/politics-international-relations/american-government-politics-and-policy/frenemies-how-social-media-polarizes-america?format=HB&isbn=9781108472531), and Chris Bail's [Breaking the Social Media Prism: How to Make Our Platforms Less Polarizing](https://press.princeton.edu/books/hardcover/9780691203423/breaking-the-social-media-prism). If you happen to be fascinated by any one of these books, I'd be delighted to have a chat with you about it. -->
 <p>Apart from doing research, I like playing with my little one (and his
 friends), hiking, traveling, doing Zumba, cooking comfort food, and
 watching talk shows, movies, and TV series. I used to be a big fan of
-classical and rock music, but as I grow older I find myself gravitating
+classical and rock music, but as time goes by I find myself gravitating
 toward podcasts, something I enjoy listening to during my daily
 commute.</p>
 <p><strong>My dissertation won an award :) A summary is available <a
