--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@ $(document).ready(function () {
 
 
 <p><link rel="stylesheet" href="styles.css" type="text/css"></p>
-<p><img src="images/YiniZhang.jpg" style="width:30%; border:5px solid; margin-right: 20px" align="left"></p>
+<p><img src="images/YZ22.jpg" style="width:30%; border:5px solid; margin-right: 20px" align="left"></p>
 <p><strong>Hi there! Welcome to this tiny corner of mine on the
 boundless internet!</strong></p>
 <p>I’m an assistant professor in the <a
@@ -330,7 +330,7 @@ with my colleagues. We have been doing cool research in the basement of
 Baldy and on Zoom. Check out our lab website <a
 href="https://cemlab.github.io/">here</a>.</strong></p>
 <p><strong>My full CV is available <a
-href="files/Yini_CV_092022.pdf">here</a>.</strong></p>
+href="files/Yini_CV_102022.pdf">here</a>.</strong></p>
 
 
 
