--- a/index.html
+++ b/index.html
@@ -287,14 +287,14 @@ SUNY-Buffalo). I graduated with a Ph.D. in mass communication from the
 <a href="https://journalism.wisc.edu">School of Journalism &amp; Mass
 Communication at the University of Wisconsin-Madison</a>.</p>
 <p>I study the processes and consequences of (mostly political)
-communication. My research program centers around three questions at
-three different levels: 1) within social media, how people express
-themselves and interact with one another, 2) as an ecosystem, how social
-media platforms relate to each other in term of the flow of information
-and ideas, and 3) beyond social media, what influences and is influenced
-by social media activity. With these three lines of inquiry, I hope to
-explore the nature and dynamics of public attention, opinion expression,
-and information sharing on social media and their implications for
+communication. My research program centers around three questions: 1)
+within social media, how people express themselves and interact with
+each other, 2) as an ecosystem, how social media platforms relate to one
+another in terms of the flow of information, and 3) beyond social media,
+what can influence and be influenced by communication and interaction on
+social media. With these three lines of inquiry, I hope to explore the
+nature and dynamics of public attention, opinion expression, and
+information sharing on social media and their implications for
 journalism and democracy.</p>
 <p>I have written academic articles about how social media actors
 assemble their followings, how social media amplify obscure actors and
@@ -324,14 +324,15 @@ watching talk shows, movies, and TV series. I used to be a big fan of
 classical and rock music, but as time goes by I find myself gravitating
 toward podcasts, something I enjoy listening to during my daily
 commute.</p>
-<p><strong>My dissertation won an award :) A summary is available <a
-href="files/A%20Network%20Approach%20Summary.pdf">here</a>.</strong></p>
-<p><strong>I co-founded the Communication and Emerging Media (CEM) lab
-with my colleagues. We have been doing cool research in the basement of
-Baldy and on Zoom. Check out our lab website <a
-href="https://cemlab.github.io/">here</a>.</strong></p>
+<p><strong>My dissertation won an award :) <a
+href="files/A%20Network%20Approach%20Summary.pdf">A summary</a> is
+available.</strong></p>
+<p><strong>I co-founded <a href="https://cemlab.github.io/">the
+Communication and Emerging Media (CEM) lab</a> with my colleagues. We
+have been doing cool research in the basement of Baldy and on
+Zoom.</strong></p>
 <p><strong>My full CV is available <a
-href="files/Yini_CV_102022.pdf">here</a>.</strong></p>
+href="files/Zhang_CV_nov22.pdf">here</a>.</strong></p>
 
 
 
