--- a/index.html
+++ b/index.html
@@ -84,14 +84,17 @@ document.addEventListener('DOMContentLoaded', function(e) {
         <div class="d-flex flex-column vh-100 border-left"></div>
         <div class="d-flex flex-column col px-5 align-items-center align-self-center mh-100" style="overflow-y: scroll;">
           <div class="my-5" id="content">
-            <p>Hi there! Welcome to this tiny corner of mine on the
-            boundless internet!</p>
+            <div id="about-me" class="section level1">
+            <h1>About Me</h1>
             <p>I’m an assistant professor in the <a href="http://www.buffalo.edu/cas/communication.html">Department
             of Communication</a> at the University at Buffalo (some
             people prefer SUNY-Buffalo). I graduated with a Ph.D. in
             mass communication from the <a href="https://journalism.wisc.edu">School of Journalism
             &amp; Mass Communication at the University of
             Wisconsin-Madison</a>.</p>
+            </div>
+            <div id="research" class="section level1">
+            <h1>Research</h1>
             <p>I study the processes and outcomes of (mostly political)
             communication, with a particular emphasis on social media.
             Through my research program, I seek to answer three primary
@@ -128,6 +131,9 @@ document.addEventListener('DOMContentLoaded', function(e) {
             computer science to facilitate communication research. My
             primary programming language is R, and I have a working
             knowledge of SPSS, Hadoop, Java, and Python.</p>
+            </div>
+            <div id="teaching" class="section level1">
+            <h1>Teaching</h1>
             <p>I find immense joy in helping students develop their
             skills and knowledge. During my years at UB, I have had the
             privilege of teaching a variety of courses, including
@@ -138,6 +144,9 @@ document.addEventListener('DOMContentLoaded', function(e) {
             teaching has been truly exhilarating. Their feedback serves
             as a constant inspiration for me to continually refine and
             improve my teaching.</p>
+            </div>
+            <div id="miscellaneous" class="section level1">
+            <h1>Miscellaneous</h1>
             <p>Apart from doing research and teaching, I like playing
             with my little one (and his friends), traveling, cooking
             comfort food, and watching talk shows, movies, and TV
@@ -156,6 +165,7 @@ document.addEventListener('DOMContentLoaded', function(e) {
             of Baldy and on Zoom. Check out our recent publications and
             on-going work on our lab site.</p>
             <p>My full CV is available <a href="files/ZHANG_CV_Mar23.pdf">here</a>.</p>
+            </div>
           </div>
         </div>
       </div>
@@ -195,14 +205,17 @@ document.addEventListener('DOMContentLoaded', function(e) {
               </div>
             </div>
             <div class="p pt-4 px-5">
-              <p>Hi there! Welcome to this tiny corner of mine on the
-              boundless internet!</p>
+              <div id="about-me" class="section level1">
+              <h1>About Me</h1>
               <p>I’m an assistant professor in the <a href="http://www.buffalo.edu/cas/communication.html">Department
               of Communication</a> at the University at Buffalo (some
               people prefer SUNY-Buffalo). I graduated with a Ph.D. in
               mass communication from the <a href="https://journalism.wisc.edu">School of Journalism
               &amp; Mass Communication at the University of
               Wisconsin-Madison</a>.</p>
+              </div>
+              <div id="research" class="section level1">
+              <h1>Research</h1>
               <p>I study the processes and outcomes of (mostly
               political) communication, with a particular emphasis on
               social media. Through my research program, I seek to
@@ -242,6 +255,9 @@ document.addEventListener('DOMContentLoaded', function(e) {
               facilitate communication research. My primary programming
               language is R, and I have a working knowledge of SPSS,
               Hadoop, Java, and Python.</p>
+              </div>
+              <div id="teaching" class="section level1">
+              <h1>Teaching</h1>
               <p>I find immense joy in helping students develop their
               skills and knowledge. During my years at UB, I have had
               the privilege of teaching a variety of courses, including
@@ -252,6 +268,9 @@ document.addEventListener('DOMContentLoaded', function(e) {
               appreciation for my teaching has been truly exhilarating.
               Their feedback serves as a constant inspiration for me to
               continually refine and improve my teaching.</p>
+              </div>
+              <div id="miscellaneous" class="section level1">
+              <h1>Miscellaneous</h1>
               <p>Apart from doing research and teaching, I like playing
               with my little one (and his friends), traveling, cooking
               comfort food, and watching talk shows, movies, and TV
@@ -270,6 +289,7 @@ document.addEventListener('DOMContentLoaded', function(e) {
               of Baldy and on Zoom. Check out our recent publications
               and on-going work on our lab site.</p>
               <p>My full CV is available <a href="files/ZHANG_CV_Mar23.pdf">here</a>.</p>
+              </div>
             </div>
         </div>
       </div>
